2005-08-16  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the AT90PWM2/3.

2005-07-27  Joerg Wunsch <j@uriah.heep.sax.de>

	(This work has been done as part of a contract with Atmel, Dresden.)
	* butterfly.c: Implement full support for AVR109 boot loaders.
	* avrdude.conf.in: add avr109 and avr911 as alias for butterfly.
	* avrdude.1: Document the AVR109 addition.
	* doc/avrdude.texi: (Ditto.)

2005-07-26  Brian S. Dean  <bsd@bsdhome.com>

	* main.c:
	  Don't call exit() directly here - set the exit value and jump to the
	  main_exit: label to ensure the programmer is released correctly.

	* stk500v2.c:
	  The stk500v2_getsync() function was improperly checking for success,
	  thus it was falsely reporting that it failed when it was actually
	  working correctly.  Fixed.

2005-07-25  Joerg Wunsch <j@uriah.heep.sax.de>

	* usb_libusb.c: Catch benign errors when reading the serial #.

2005-06-19  Joerg Wunsch <j@uriah.heep.sax.de>

	* Makefile.am: Implement libusb-base USB transport for the
	JTAG ICE mkII.
	* configure.ac: ditto.
	* jtagmkII.c: ditto.
	* ser_posix.c: ditto.
	* ser_win32.c: ditto.
	* serial.h: ditto.
	* usb_libusb.c: ditto (New file).
	* avrdude.1: document the USB transport.
	* doc/avrdude.texi: ditto.

2005-06-15  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: The AT90CAN128 has AllowFullPageBitstream = no.

2005-06-14  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the ATmega164/324/644.
	* jtagmkII.c: If enter_progmode fails with RSP_ILLEGAL_JTAG_ID, give
	the user a hint that the JTAGEN fuse might be unset.

2005-06-11  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the ATmega329x/649x.

2005-05-27  Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c: fix a signedness bug when shifting bits; when
	discarding a packet for being overly long, restart the state
	machine instead of attempting to drop a preposterous amount
	of data.
